<resources>
    <string name="app_name">LoginApp</string>
    <string name="email_hint">Email</string>
    <string name="button_login">Login</string>
    <string name="password_hint">Password</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_forgot_password">forgot password</string>
    <string name="button_register">Register</string>
    <string name="username_hint">Username</string>
    <string name="register_password_hint">Password</string>
    <string name="register_email_hint">Email</string>
    <string name="register_repeat_password_hint">Repeat Password</string>
    <string name="button_login_register">Register</string>
    <string name="recovery_email_hint">Email</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_forgotPassword">ForgotPasswordActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="show_username_after_login">Username</string>
    <string name="show_email_after_login">Email</string>
    <string name="welcome_login_screen">Welcome</string>


</resources>
