<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:id="@+id/scrollView"
    tools:context="com.example.jakob.loginapp.activities.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#c6f0ff"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:baselineAligned="false"
        android:orientation="vertical">


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:id="@+id/editTextEmail"
            android:hint="@string/email_hint"
            android:background="#ffffff"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:id="@+id/editTextPassword"
            android:hint="@string/password_hint"
            android:background="#ffffff"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:inputType="textPassword" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sign_in"
            android:id="@+id/btnSignIn"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffff"
            android:padding="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#c6f0ff"
            android:text="@string/button_forgot_password"
            android:id="@+id/btnForgotPassword"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffff"
            android:padding="10dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_register"
            android:id="@+id/btnRegister"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffff"
            android:padding="10dp" />

    </LinearLayout>
</ScrollView>