<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    tools:context="com.example.jakob.loginapp.activities.RegisterActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:baselineAligned="false"
        android:background="#c6f0ff">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextUsername"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:background="#ffffff"
            android:layout_marginBottom="5dp"
            android:hint="@string/username_hint"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextRegisterEmail"
            android:layout_gravity="center_horizontal"
            android:background="#ffffff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:hint="@string/register_email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextRegisterPassword"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#ffffff"
            android:padding="10dp"
            android:hint="@string/register_password_hint"
            android:inputType="textPassword" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextRegisterPasswordRepeat"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="#ffffff"
            android:padding="10dp"
            android:hint="@string/register_repeat_password_hint"
            android:inputType="textPassword" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login_register"
            android:id="@+id/btnRegisterRegister"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffff" />

    </LinearLayout>
</ScrollView>